
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int SIZE ;
 int checkstatus (int ) ;
 char* cmdbuf ;
 int memset (char*,int ,int) ;
 char* portstr ;
 int printf (char*,char*) ;
 int readbuf (int *,int ,int ,int) ;
 int sendbuf (int ,char*,int) ;
 int sockfd ;
 int sprintf (char*,char*,char*,...) ;
 int srvbuf ;

void setport(char *l,int pt1)
{
    int a,i,b,c,j;
    char buf[30];

    memset(buf,0,30);
    i=sprintf(buf,"%s",l);
    for(a=0;a<i;a++)
        if(buf[a]=='.') buf[a]=',';
    memset(cmdbuf,0,SIZE);
    b=(pt1 >> 8 ) & 0xff;
    c=pt1 & 0xff;
    j=sprintf(cmdbuf,"%s %s,%d,%d\r\n",portstr,buf,b,c);
    printf("[+] %s",cmdbuf);
    sendbuf(sockfd,cmdbuf,j);
    readbuf(((void*)0),sockfd,srvbuf,SIZE);
    checkstatus(srvbuf);
}
